<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <ImageView
        android:id="@+id/travelHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_logo" />

    <!-- Nom du voyage -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nom_note"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="63dp"
        android:hint="@string/nom_de_la_note" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:hint="@string/note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Encoche verte -->
    <ImageView
        android:id="@+id/encoche_verte"
        android:visibility="invisible"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/encoche_verte" />

    <!-- Encoche grise -->
    <ImageView
        android:id="@+id/encoche_grise"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/encoche_grise" />

    <!-- Croix -->
    <ImageView
        android:id="@+id/croix"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/cross" />

    <!-- Champs obligatoires -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="16dp"
        android:text="@string/champs_obligatoires" />
</RelativeLayout>